Monitoring/Ingress-alertManager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: alertmanager.dogsvscats.tactful
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alertmanager-operated
            port:
              number: 9093
